Bug 945088 - Use the correct device offset in gfxContext. r=mattwoodrow, a=bkerensa